--- a/pstn-callrecord-plan-alerts.csproj
+++ b/pstn-callrecord-plan-alerts.csproj
@@ -9,6 +9,8 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="AdaptiveCards" Version="3.0.0" />
+    <PackageReference Include="Azure.Identity" Version="1.8.2" />
+    <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.4.0" />
     <PackageReference Include="Microsoft.Azure.WebJobs" Version="3.0.36" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.1.1" />
@@ -17,7 +19,7 @@
     <PackageReference Include="Microsoft.Bot.Connector.Teams" Version="0.10.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version=" 6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
-    <PackageReference Include="Microsoft.Identity.Client" Version="4.41.0" />
+    <PackageReference Include="Microsoft.Identity.Client" Version="4.49.1" />
     <Content Include="./extensions/TeamsNotificationCard.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         <CopyToPublishDirectory>Always</CopyToPublishDirectory>
