--- a/pstn-callrecord-plan-alerts.csproj
+++ b/pstn-callrecord-plan-alerts.csproj
@@ -9,10 +9,12 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="AdaptiveCards" Version="3.0.0" />
+    <PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.2.2" />
     <PackageReference Include="Azure.Identity" Version="1.8.2" />
     <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.4.0" />
     <PackageReference Include="Microsoft.Azure.WebJobs" Version="3.0.36" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.AzureKeyVault" Version="3.1.24" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.1.1" />
     <PackageReference Include="AdaptiveCards.Templating" Version="1.3.2" />
     <PackageReference Include="Microsoft.Bot.Connector" Version="4.19.2" />
